# PKS

./: .gitignore
sources/: CMakeLists.txt  Device.out  Meter.uvmpw  Meter.uvmpw.uvgui.Sasha  Meter.uvmpw.uvgui_Sasha.bak  NFC.uvmpw  Описание.txt
sources/Device/: CMakeLists.txt  Device.out  Device.sct  Device.uvguix.Sasha  Device.uvguix.Sasha.bak  Device.uvoptx  Device.uvprojx  Meter.crc
sources/Device/src/: Device.c  Device.cpp  Device.h  Globals.cpp  Globals.h  Log.cpp  Log.h  Test.cpp  Test.h  defines.cpp  defines.h  main.c  main.cpp  opt.h
sources/Device/src/Calculator/: Calculator.h
sources/Device/src/Display/: Display.c  Display.cpp  Display.h
sources/Device/src/FlashDisk/: FlashDisk.cpp  FlashDisk.h
sources/Device/src/Hardware/: Beeper.cpp  Beeper.h  Bootloader.cpp  Communicator.cpp  Communicator.h  Contactor.cpp  Contactor.h  Power.cpp  Power.h  Programmer.cpp  Programmer.h  Timer.cpp  Timer.h
sources/Device/src/Measurer/: Calculator.c  Calculator.cpp  Calculator.h  Contactor.cpp  Contactor.h  Contactors.cpp  Measurer.c  Measurer.cpp  Measurer.h
sources/Device/src/Modem/: Commands.cpp  Commands.h  MQTT.cpp  MQTT.h  Modem.c  Modem.cpp  Modem.h  Parser.cpp  Parser.h  SIM800.cpp  SIM800.h  Sender.h  Updater.cpp
sources/Device/src/Nodes/: Counter.cpp  Counter.h
sources/Device/src/Storage/: MemoryStorage.cpp  MemoryStorage.h  Storage.cpp  Storage.h
sources/Device/src/Utils/: Buffer.cpp  Buffer.h  Math.h  SoftwareGenerator.cpp  SoftwareGenerator.h  String.cpp  String.h  Updater.c  Updater.cpp  Updater.h
sources/Loader/: CMakeLists.txt  Loader.sct  Loader.uvguix.Sasha  Loader.uvoptx  Loader.uvprojx
sources/Loader/Objects-Debug/: ElectricityMeter.axf  ElectricityMeter.build_log.htm  ElectricityMeter.hex  ElectricityMeter.lnp  Loader_Debug.dep  gd32f30x_adc.d  gd32f30x_dma.d  gd32f30x_gpio.d  gd32f30x_i2c.d  gd32f30x_misc.d  gd32f30x_rcu.d  gd32f30x_timer.d  hal.d  hal_it.d  main.d  sim800c.d  startup_gd32f30x_hd.d  system_gd32f30x.d  systick.d
sources/Loader/src/: Application.cpp  Loader.cpp  Loader.h  defines.h  main.c  main.cpp  opt.h
sources/Loader/src/Hardware/: Programmer.cpp  Programmer.h  Timer.h
sources/Loader/src/Measurer/: Contactors.cpp  Contactors.h  Measurer.cpp  Measurer.h
sources/Loader/src/Modem/: Modem.cpp  Modem.h  Parser.cpp  Parser.h  ReaderFTP.cpp  SIM800.cpp  SIM800.h  Sender.cpp  Updater.cpp  Updater.h
sources/Loader/src/Utils/: String.cpp  String.h
sources/TestHardware/: CMakeLists.txt  TestHardware.uvguix.Sasha  TestHardware.uvoptx  TestHardware.uvprojx
sources/TestHardware/src/: Device.cpp  Log.cpp  Log.h  Test.cpp  Test.h  defines.h  main.cpp
sources/TestHardware/src/Calculator/: Calculator.cpp
sources/TestHardware/src/Display/: Display.cpp  Display.h  SSD1306.cpp
sources/TestHardware/src/Hardware/: Timer.cpp  Timer.h
sources/TestHardware/src/Measurer/: Measurer.h  ZMPT101.cpp
sources/TestHardware/src/Modem/: Modem.cpp  Modem.h  SIM800C.cpp
sources/TestHardware/src/Utils/: Mutex.h
sources/TesterRele/: CMakeLists.txt  TesterRele.uvguix.Sasha  TesterRele.uvoptx  TesterRele.uvprojx
sources/TesterRele/src/: Device.cpp  TesterRele.cpp  TesterRele.h  defines.h  etc.cpp  main.cpp  opt.h
sources/TesterRele/src/Display/: Display.cpp  Display.h
sources/TesterRele/src/FlashDisk/: FlashDisk.h
sources/TesterScheme/: CMakeLists.txt  TesterScheme.uvguix.Sasha  TesterScheme.uvguix.Sasha.bak  TesterScheme.uvoptx  TesterScheme.uvprojx
sources/TesterScheme/src/: Device.cpp  defines.h  description.txt  main.cpp
sources/TesterScheme/src/Display/: Display.cpp
sources/TesterScheme/src/Measurer/: Averager.h  Contactors.cpp  Contactors.h  Measurer.cpp
sources/TesterScheme/src/Modem/: Modem.cpp  SIM800.cpp  SIM800_transmit.cpp
sources/TesterScheme/src/Settings/: Settings.cpp
sources/TesterScheme/src/Storage/: Storage.cpp  Storage.h
sources/VS/: CMakeLists.txt
sources/VS/Device/: Application.cpp  CMakeLists.txt  Frame.cpp  Frame.h  main_win.cpp
sources/VS/Device/Display/: Display.cpp  Display.h
sources/VS/HandlerBIN/HandlerBIN/: HandlerBIN.cpp  HandlerBIN.vcxproj  HandlerBIN.vcxproj.filters
sources/_modem&display/: Device.cpp  Log.h  Test.h  defines.h
sources/_modem&display/Display/: Display.cpp  Display.h
sources/_modem&display/FlashDisk/: FlashDisk.cpp  FlashDisk.h
sources/_modem&display/Hardware/: Contactor.cpp  Timer.cpp  Timer.h
sources/_modem&display/Hardware/CMSIS/: startup_gd32f30x_hd.s
sources/_modem&display/Hardware/HAL/: HAL.h  HAL_I2C.cpp  HAL_PINS.cpp  HAL_SPI.cpp
sources/_modem&display/Measurer/: Calculator.cpp  Measurer.cpp
sources/_modem&display/Modem/: Modem.cpp
sources/_modem&display/Utils/: SoftwareGenerator.cpp  SoftwareGenerator.h  Updater.cpp
sources/common/: Globals.cpp  Globals.h  common_defines.h
sources/common/Display/: Console.cpp  Console.h  Display.cpp  Display.h  SSD1306.cpp
sources/common/Hardware/: Timer.cpp  Timer.h
sources/common/Hardware/HAL/: HAL.cpp  HAL.h  HAL_FWDGT.cpp  HAL_I2C.cpp  HAL_IT.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_PINS_GP.cpp  HAL_SPI.cpp  HAL_SPI2.cpp  HAL_USART.cpp  systick.h
sources/common/Measurer/: Averager.h  Calculator.cpp  Contactors.cpp  Contactors.h  Measurer.cpp  Measurer.h
sources/common/Memory/: M25P80.cpp  Memory.cpp  Memory.h
sources/common/Modem/: MQTT.cpp  MQTT.h  Modem.cpp  Modem.h  Parser.cpp  Parser.h  ProcessorReceivedData.cpp  ProcessorReceivedData.h  SIM800.h  SIM800_transmit.cpp
sources/common/Modem/MQTT/: MQTT.cpp  MQTT.h  Sender.cpp  Sender.h
sources/common/Modem/SCPI/: BaseSCPI.cpp  BaseSCPI.h  ControlSCPI.cpp  ControlSCPI.h  InfoSCPI.cpp  InfoSCPI.h  ModemSCPI.cpp  (+5 more)
sources/common/STM32Cube_F3/: Package_license.html  Package_license.md
sources/common/Settings/: Settings.cpp  Settings.h
sources/common/Utils/: Buffer.h  Debug.cpp  Log.cpp  Log.h  Math.h  RingBuffer.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h
sources/scripts/: assembly.bat
sources/scripts/Keil/: edit.bat
sources/scripts/vs_gui/: assembly.bat  edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
(+931 files in other folders)
