cmake_minimum_required(VERSION 3.14)

project (NFC-Reader)

set (TARGET_NAME )

if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
    add_definitions(-DDEBUG)
endif()

add_subdirectory(Device)
add_subdirectory(Reader771_1)
add_subdirectory(3-Accelerometer)
add_subdirectory(Sample)
add_subdirectory(CodeGenerator)
